@@ -14,7 +14,7 @@
   <tr class="<%= cycle("odd", "even") %>">
 	<td><%= link_to custom_field.name, :action => 'edit', :id => custom_field %></td>
 	<td align="center"><%= l(custom_field.type_name) %></td>
-	<td align="center"><%= l(CustomField::FIELD_FORMATS[custom_field.field_format]) %></td>
+	<td align="center"><%= l(CustomField::FIELD_FORMATS[custom_field.field_format][:name]) %></td>
 	<td align="center"><%= image_tag 'true' if custom_field.is_required? %></td>
 	<td align="center"><%= image_tag 'true' if custom_field.is_for_all? %></td>
 	<td align="center"><%= custom_field.projects.count.to_s + ' ' + lwr(:label_project, custom_field.projects.count) if custom_field.is_a? IssueCustomField and !custom_field.is_for_all? %></td>
